Applied minor improvements.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -64,7 +64,7 @@
 
   \section{summary}
 
-    Hi everyone! I'm a double Bachelor's degree graduate in Computer Engineering and (future graduate) in Statistics from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on Combinatorial Optimization via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to solve any kind of problem. I'm curious about Natural Language Processing and Sequential Models.
+    Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and (future graduate) in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on \textbf{Combinatorial Optimization} via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm curious about Sequential Models, Software Architecture Patterns and the Rust Programming Language. Currently, I'm happily working at \textbf{Unlimiteck Company Builder} developing tools to solve complex combinatorial problems.
 
 %-------------------------------------------------------------------------------
 
@@ -85,13 +85,13 @@
       \entry
       {}
       {Remote Software Engineer}
-      {\Unlimiteck}
+      {}
       {1 year}
 
       \entry
       {}
       {Software Engineer Intern}
-      {\Unlimiteck}
+      {}
       {3 months}
 
       \\
@@ -152,6 +152,63 @@
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
+%	EDUCATION SECTION
+%-------------------------------------------------------------------------------
+
+\section{education}
+
+\begin{entrylist}
+
+  \entry
+  {2017 -- present}
+  {\myhref{http://www.eio.uva.es/}{Statistics}}
+  {\UVa}
+  {Bachelor's Degree}
+
+  \\
+  \entry
+  {2019}
+  {\myhref{http://ems.unibo.it/en/}{Statistics}}
+  {\UNIBO}
+  {Erasmus+}
+
+  \\
+  \entry
+  {2013 -- 2017}
+  {\myhref{https://www.inf.uva.es/}{Computer Engineering, mention in Computation}}
+  {\UVa}
+  {Bachelor's Degree}
+
+  \\
+  \entry
+  {2011 -- 2013}
+  {Social Sciences}
+  {IES Alonso Berruguete}
+  {High School}
+
+\end{entrylist}
+
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%	PUBLICATIONS SECTION
+%-------------------------------------------------------------------------------
+
+  \section{publications}
+
+    \begin{entrylist}
+
+      \entry
+      {2017}
+      {\myhref{https://arxiv.org/abs/1708.07829}{Algorithms for Big Data: Graphs and PageRank}}
+      {\UVa}
+      {Final Degree Project}
+
+    \end{entrylist}
+
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
 %	CONTESTS SECTION
 %-------------------------------------------------------------------------------
 
@@ -184,62 +241,6 @@
       {T3chFest}
       {UC3M}
       {17th position}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	PUBLICATIONS SECTION
-%-------------------------------------------------------------------------------
-
-  \section{publications}
-
-    \begin{entrylist}
-
-      \entry
-      {2017}
-      {\myhref{https://arxiv.org/abs/1708.07829}{Algorithms for Big Data: Graphs and PageRank}}
-      {\UVa}
-      {Final Degree Project}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	EDUCATION SECTION
-%-------------------------------------------------------------------------------
-
-  \section{education}
-
-    \begin{entrylist}
-      \entry
-      {2019 -- present}
-      {\myhref{http://ems.unibo.it/en/}{Statistics}}
-      {\UNIBO}
-      {Erasmus+}
-
-      \\
-      \entry
-      {2017 -- present}
-      {\myhref{http://www.eio.uva.es/}{Statistics}}
-      {\UVa}
-      {Bachelor's Degree}
-
-      \\
-      \entry
-      {2013 -- 2017}
-      {\myhref{https://www.inf.uva.es/}{Computer Engineering, mention in Computation}}
-      {\UVa}
-      {Bachelor's Degree}
-
-      \\
-      \entry
-      {2011 -- 2013}
-      {Social Sciences}
-      {IES Alonso Berruguete}
-      {High School}
 
     \end{entrylist}
 
