* Renamed "Software Architecture Patterns" to "Architectural Patterns"

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -64,7 +64,7 @@
 
   \section{summary}
 
-    Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and (future graduate) in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on \textbf{Combinatorial Optimization} via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm curious about Sequential Models, Software Architecture Patterns and the Rust Programming Language. Currently, I'm happily working at \textbf{Unlimiteck Company Builder} developing tools to solve complex combinatorial problems.
+    Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and (future graduate) in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on \textbf{Combinatorial Optimization} via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm curious about Sequential Models, Architectural Patterns and the Rust Programming Language. Currently, I'm happily working at \textbf{Unlimiteck Company Builder} developing tools to solve complex combinatorial problems.
 
 %-------------------------------------------------------------------------------
 
