* Included Helpacket project

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -19,6 +19,7 @@
 \newcommand{\TFGraph}{\myhref{https://github.com/tfgraph}{TFGraph}}
 \newcommand{\ngkatex}{\myhref{https://github.com/garciparedes/ng-katex}{ng-katex}}
 \newcommand{\jinete}{\myhref{https://github.com/garciparedes/jinete}{jinete}}
+\newcommand{\helpacket}{\myhref{https://github.com/helpacket}{Helpacket}}
 
 \pagestyle{fancy}
 \fancyhf{}
@@ -121,11 +122,18 @@
     \begin{entrylist}
 
       \entry
+      {2020 -- 2020}
+      {\helpacket}
+      {Django + Vue.js}
+      {Open source and collaborative platform against COVID-19}
+
+      \\
+      \entry
       {2019 -- present}
       {\jinete}
       {Python}
       {High Performance solving suite for the Pickup and Delivery Problem and its related extensions}
-
+      
       \\
       \entry
       {2017 -- present}
