--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -433,9 +433,9 @@
 
   \section{interests}
 
-    \textbf{professional:} computing problems, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things
+    \textbf{professional:} competitive programming problems, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things
 
-    \textbf{personal:} motor sports, rap and classic music, turntablism, cooking, technology
+    \textbf{personal:} motor sports, rap and instrumental music (especially lo-fi beats), turntablism, cooking, biking, technology
 
 %-------------------------------------------------------------------------------
 
