--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -65,7 +65,7 @@
 
   \section{summary}
 
-    Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and (future graduate) in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on \textbf{Combinatorial Optimization} via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm curious about Sequential Models, Architectural Patterns and the Rust Programming Language. 
+  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and (future graduate) in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on \textbf{Combinatorial Optimization} via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm curious about \textbf{Sequential Models}, \textbf{Architectural Patterns} and the \textbf{Rust Programming Language}.
 
 %-------------------------------------------------------------------------------
 
@@ -413,7 +413,7 @@
       {}
       {English}
       {}
-      {B1 Level (ACLES certificate)}
+      {B2 Level (Erasmus+ OLS certificate)}
 
       \\
       \entry
