* Update up to latest achievements

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -65,7 +65,7 @@
 
   \section{summary}
 
-  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and (future graduate) in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on \textbf{Combinatorial Optimization} via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm curious about \textbf{Sequential Models}, \textbf{Architectural Patterns} and the \textbf{Rust Programming Language}.
+  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on \textbf{Combinatorial Optimization} via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm specially curious about \textbf{Sequential Models}, \textbf{Architectural Patterns} and the \textbf{Rust Programming Language}. One of my biggest hobbies is \textbf{Competitive Programming}, which I try to practice as much as possible.
 
 %-------------------------------------------------------------------------------
 
@@ -82,12 +82,6 @@
       {Software Engineer}
       {\Unlimiteck}
       {current}
-
-      \entry
-      {}
-      {Remote Software Engineer}
-      {}
-      {1 year}
 
       \entry
       {}
@@ -122,7 +116,7 @@
     \begin{entrylist}
 
       \entry
-      {2020 -- 2020}
+      {2020}
       {\helpacket}
       {Django + Vue.js}
       {Open source and collaborative platform against COVID-19}
@@ -171,21 +165,21 @@
   {2017 -- 2020}
   {\myhref{http://www.eio.uva.es/}{Statistics}}
   {\UVa}
-  {Bachelor's Degree}
+  {Bachelor's Degree, 7.925/10.0}
 
   \\
   \entry
   {2019}
   {\myhref{http://ems.unibo.it/en/}{Statistics}}
   {\UNIBO}
-  {Erasmus+}
+  {Erasmus+, 28/30}
 
   \\
   \entry
   {2013 -- 2017}
   {\myhref{https://www.inf.uva.es/}{Computer Engineering, mention in Computation}}
   {\UVa}
-  {Bachelor's Degree}
+  {Bachelor's Degree, 7.885/10.0}
 
   \\
   \entry
@@ -207,6 +201,12 @@
     \begin{entrylist}
 
       \entry
+      {2020}
+      {\myhref{}{Scalable solving methods for the Dial-a-Ride Problem}}
+      {\UVa}
+      {Final Degree Project}
+      
+      \entry
       {2017}
       {\myhref{https://arxiv.org/abs/1708.07829}{Algorithms for Big Data: Graphs and PageRank}}
       {\UVa}
@@ -224,6 +224,19 @@
 
     \begin{entrylist}
 
+      \entry
+      {2020}
+      {\myhref{https://leetcode.com/contest/biweekly-contest-39/ranking/}{Biweekly Contest 39}}
+      {LeeCode}
+      {199 / 6047 (3.3\% top )}
+      
+      \entry
+      {}
+      {\myhref{https://leetcode.com/contest/biweekly-contest-37/ranking/}{Biweekly Contest 37}}
+      {LeeCode}
+      {99 / 8250 (1.2\% top )}
+     
+      \\
       \entry
       {2019}
       {Tuenti Challenge 9}
@@ -433,7 +446,7 @@
 
   \section{interests}
 
-    \textbf{professional:} competitive programming problems, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things
+    \textbf{professional:} competitive programming, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things
 
     \textbf{personal:} motor sports, rap and instrumental music (especially lo-fi beats), turntablism, cooking, biking, technology
 
