* Add job role descriptions.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -81,73 +81,49 @@
       {2018/06 -- present}
       {Software Engineer}
       {\Unlimiteck}
-      {current}
+      {
+        \begin{itemize}
+          \item Be the core engineer of an Autonomous and Unsupervised Testing System, based on scraping, being able to detect almost all interface changes and schedule navigation paths towards more susceptible bug areas.
+          \item Design and Develop a remote computing protocol, currently used by the company as the standard data sharing strategy.
+          \item Propose and evangelize a Python + VCS packaging strategy around the company, firstly over Subversion and currently over Git
+          \item Take part in a Car Damage Detection system based on image analysis mostly approached with Depth Learning strategies.
+        \end{itemize}
+      }
 
       \entry
       {}
       {Software Engineer Intern}
       {}
-      {3 months}
+      {
+        \begin{itemize}
+          \item Design and Develop the implementation of a fully functional Vehicle Routing solving suite achieving results equivalent to another commercial alternatives, but with an easy-to-use and extensible to client requirements design.
+        \end{itemize}
+      }
 
       \\
       \entry
       {2018/03 -- 2018/08}
       {Research Assistant Intern}
       {\UVa}
-      {6 months}
+      {
+        \begin{itemize}
+          \item Develop an ETL pipeline fully written in R which helped a Research Group in the task of knowing what vehicle's internal parts have been damaged, given many metrics from the external ones.
+          \item Help speeding up intensive computation functions initially written in R with C++ bindings.
+        \end{itemize}
+      }
 
       \\
       \entry
       {2016/06 -- 2016/08}
       {Software Engineer Intern}
       {\Brooktec}
-      {3 months}
+      {
+        \begin{itemize}
+          \item Develop a Song Polling plugin for WordPress.
+          \item Maintain already stablished PHP projects, applying client update requests.
 
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	PROJECTS SECTION
-%-------------------------------------------------------------------------------
-
-  \section{projects}
-
-    \begin{entrylist}
-
-      \entry
-      {2020}
-      {\helpacket}
-      {Django + Vue.js}
-      {Open source and collaborative platform against COVID-19}
-
-      \\
-      \entry
-      {2019 -- present}
-      {\jinete}
-      {Python}
-      {High Performance solving suite for the Pickup and Delivery Problem and its related extensions}
-
-      \\
-      \entry
-      {2017 -- present}
-      {\ngkatex}
-      {Angular}
-      {\TeX\ math expressions processing on browsers boosted by KaTeX}
-
-      \\
-      \entry
-      {2017}
-      {\TFGraph}
-      {Python}
-      {Graph networks processing on GPUs}
-
-      \\
-      \entry
-      {2015 -- 2016}
-      {\EvaluaMe}
-      {Android}
-      {Tracker app for your school marks}
+        \end{itemize}
+      }
 
     \end{entrylist}
 
@@ -189,6 +165,52 @@
   {High School}
 
 \end{entrylist}
+
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%	PROJECTS SECTION
+%-------------------------------------------------------------------------------
+
+  \section{projects}
+
+    \begin{entrylist}
+
+      \entry
+      {2019}
+      {\helpacket}
+      {Django + Vue.js}
+      {Open source and collaborative platform against COVID-20}
+
+      \\
+      \entry
+      {2018 -- present}
+      {\jinete}
+      {Python}
+      {High Performance solving suite for the Pickup and Delivery Problem and its related extensions}
+
+      \\
+      \entry
+      {2016 -- present}
+      {\ngkatex}
+      {Angular}
+      {\TeX\ math expressions processing on browsers boosted by KaTeX}
+
+      \\
+      \entry
+      {2016}
+      {\TFGraph}
+      {Python}
+      {Graph networks processing on GPUs}
+
+      \\
+      \entry
+      {2014 -- 2016}
+      {\EvaluaMe}
+      {Android}
+      {Tracker app for your school marks}
+
+    \end{entrylist}
 
 %-------------------------------------------------------------------------------
 
