--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -83,7 +83,7 @@
       {\Unlimiteck}
       {
         \begin{itemize}
-          \item Be the core engineer of an Autonomous and Unsupervised Testing System, based on scraping, being able to detect almost all interface changes and schedule navigation paths towards more susceptible bug areas.
+          \item Build a fully Autonomous and Unsupervised Testing System based on scraping and intelligent navigation from the ground, being able to detect almost all interface changes and schedule navigation paths towards more susceptible bug areas.
           \item Design and Develop a remote computing protocol, currently used by the company as the standard data sharing strategy.
           \item Propose and evangelize a Python + VCS packaging strategy around the company, firstly over Subversion and currently over Git
           \item Take part in a Car Damage Detection system based on image analysis mostly approached with Depth Learning strategies.
