* Perform detph refactor.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -85,7 +85,7 @@
         \begin{itemize}
           \item Build a fully Autonomous and Unsupervised Testing System based on scraping and intelligent navigation from the ground, being able to detect almost all interface changes and schedule navigation paths towards more susceptible bug areas.
           \item Design and Develop a remote computing protocol, currently used by the company as the standard data sharing strategy.
-          \item Propose and evangelize a Python + VCS packaging strategy around the company, firstly over Subversion and currently over Git
+          \item Propose, define and assist in the implantation of a Python + VCS packaging strategy around the company, firstly over Subversion and currently over Git
           \item Take part in a Car Damage Detection system based on image analysis mostly approached with Depth Learning strategies.
         \end{itemize}
       }
@@ -121,7 +121,6 @@
         \begin{itemize}
           \item Develop a Song Polling plugin for WordPress.
           \item Maintain already stablished PHP projects, applying client update requests.
-
         \end{itemize}
       }
 
@@ -139,32 +138,64 @@
 
   \entry
   {2017 -- 2020}
-  {\myhref{http://www.eio.uva.es/}{Statistics}}
+  {\myhref{http://www.eio.uva.es/}{BSc. Statistics}, 7.925/10.0}
   {\UVa}
-  {Bachelor's Degree, 7.925/10.0}
+  {
+    
+    \begin{itemize}
+        \item Enforce algorithmic skills mostly on Operations Research subjects, analyzing combinatorial optimization problems specifically those related with Vehicle Routing Problems (VRP).
+      \item Enrich mathematical knowledge mostly on calculus and theorical statistics related subjects.
+      \item Thesis title: Scalable solving methods for the Dial-a-Ride Problem.
+      \item High marks: \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46959.pdf}{Operation Research Models} (Hons), \myhref{https://alojamientos.uva.es/guia_docente/uploads/2017/549/47089/1/Documento.pdf}{Statistical Computing}, \myhref{https://alojamientos.uva.es/guia_docente/uploads/2018/549/47102/1/Documento.pdf}{Categorical Data Analysis}.
+    \end{itemize}
+  }
 
   \\
   \entry
   {2019}
-  {\myhref{http://ems.unibo.it/en/}{Statistics}}
+  {\myhref{http://ems.unibo.it/en/}{Erasmus+, Statistics}, 28/30}
   {\UNIBO}
-  {Erasmus+, 28/30}
+  {
+    \begin{itemize}
+      \item Abroad experience during 6 months on a foreign country and different language (classes taught in Engligh).
+      \item Depth understanding of the Generalized Linear Model (GLM).
+      \item High marks on: \myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2019/423526}{Statistical Models and Applications}, \myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2018/423554}{Advanced Survival Analysis}.
+    \end{itemize}
+  }
 
   \\
   \entry
   {2013 -- 2017}
-  {\myhref{https://www.inf.uva.es/}{Computer Engineering, mention in Computation}}
+  {\myhref{https://www.inf.uva.es/}{BSc. Computer Engineering, Computation}, 7.885/10.0}
   {\UVa}
-  {Bachelor's Degree, 7.885/10.0}
-
-  \\
-  \entry
-  {2011 -- 2013}
-  {Social Sciences}
-  {IES Alonso Berruguete}
-  {High School}
+  {
+    \begin{itemize}
+      \item Build a Problem-Solving mentality, focused mostly on the how-to-do and analysis of implications of the available approaches.
+      \item Interest for mostly algorithmic subjects, but also paying special attention to the ones related with software engineering topics.
+      \item Thesis title: Algorithms for Big Data: Graphs and PageRank.
+      \item High marks: \myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46944.pdf}{Algorithms and Computing} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46948.pdf}{Codes and Cryptography} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46929.pdf}{Parallel Computing} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2014/07/G46915.pdf}{Operating Systems Structures} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46970.pdf}{Data Mining}, \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46932.pdf}{Machine Learning Techniques}, \myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46931.pdf}{Web Services and Systems}, \myhref{https://www.inf.uva.es/wp-content/uploads/2012/07/C12-45187-RED.pdf}{Fundamentals of Computer Networks}.
+    \end{itemize}
+  }
 
 \end{entrylist}
+
+%-------------------------------------------------------------------------------
+
+%-------------------------------------------------------------------------------
+%	COMPETITIVE PROGRAMMING SECTION
+%-------------------------------------------------------------------------------
+
+  \section{competitive programming}
+
+    \begin{itemize}
+      \item \textbf{Advent of Code 2020}: Fully finished on time (Christmas day).
+      \item \textbf{LeetCode's Biweekly Contest 39}: 199/6047 (3.3\% top).
+      \item \textbf{LeetCode's Biweekly Contest 37}: 99/8250 (1.2\% top).
+      \item \textbf{Tuenti Challenge 9}: 61st position.
+      \item \textbf{Google's HashCode 2019}: 20th of Spain and 801th of the world.
+      \item \textbf{Google's HashCode 2018}: 1th of Hub and 30th of Spain.
+      \item \textbf{UC3M's T3chFest 2017}: 17th position.
+    \end{itemize}
 
 %-------------------------------------------------------------------------------
 
@@ -173,304 +204,15 @@
 %-------------------------------------------------------------------------------
 
   \section{projects}
-
-    \begin{entrylist}
-
-      \entry
-      {2019}
-      {\helpacket}
-      {Django + Vue.js}
-      {Open source and collaborative platform against COVID-20}
-
-      \\
-      \entry
-      {2018 -- present}
-      {\jinete}
-      {Python}
-      {High Performance solving suite for the Pickup and Delivery Problem and its related extensions}
-
-      \\
-      \entry
-      {2016 -- present}
-      {\ngkatex}
-      {Angular}
-      {\TeX\ math expressions processing on browsers boosted by KaTeX}
-
-      \\
-      \entry
-      {2016}
-      {\TFGraph}
-      {Python}
-      {Graph networks processing on GPUs}
-
-      \\
-      \entry
-      {2014 -- 2016}
-      {\EvaluaMe}
-      {Android}
-      {Tracker app for your school marks}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	PUBLICATIONS SECTION
-%-------------------------------------------------------------------------------
-
-  \section{publications}
-
-    \begin{entrylist}
-
-      \entry
-      {2020}
-      {\myhref{}{Scalable solving methods for the Dial-a-Ride Problem}}
-      {\UVa}
-      {Final Degree Project}
-      
-      \entry
-      {2017}
-      {\myhref{https://arxiv.org/abs/1708.07829}{Algorithms for Big Data: Graphs and PageRank}}
-      {\UVa}
-      {Final Degree Project}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	CONTESTS SECTION
-%-------------------------------------------------------------------------------
-
-  \section{contests}
-
-    \begin{entrylist}
-
-      \entry
-      {2020}
-      {\myhref{https://leetcode.com/contest/biweekly-contest-39/ranking/}{Biweekly Contest 39}}
-      {LeeCode}
-      {199 / 6047 (3.3\% top )}
-      
-      \entry
-      {}
-      {\myhref{https://leetcode.com/contest/biweekly-contest-37/ranking/}{Biweekly Contest 37}}
-      {LeeCode}
-      {99 / 8250 (1.2\% top )}
-     
-      \\
-      \entry
-      {2019}
-      {Tuenti Challenge 9}
-      {Tuenti}
-      {61st position}
-
-      \entry
-      {}
-      {HashCode}
-      {Google}
-      {20th of Spain and 801th of the world}
-
-      \\
-      \entry
-      {2018}
-      {HashCode}
-      {Google}
-      {1th of Hub and 30th of Spain}
-
-      \\
-      \entry
-      {2017}
-      {T3chFest}
-      {UC3M}
-      {17th position}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	ACADEMIC REMARKS SECTION
-%-------------------------------------------------------------------------------
-
-  \section{academic remarks}
-
-    \begin{entrylist}
-
-      \entry
-      {2019}
-      {\myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2019/423526}{Statistical Models and Applications}}
-      {\UNIBO}
-      {Score: 28/30}
-
-      \entry
-      {}
-      {\myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2018/423554}{Advanced Survival Analysis}}
-      {\UNIBO}
-      {Score: 28/30}
-
-      \entry
-      {}
-      {\myhref{https://alojamientos.uva.es/guia_docente/uploads/2018/549/47102/1/Documento.pdf}{Categorical Data Analysis}}
-      {\UVa}
-      {Score: 9.0/10.0}
-
-      \\
-      \entry
-      {2018}
-      {\myhref{https://alojamientos.uva.es/guia_docente/uploads/2017/549/47089/1/Documento.pdf}{Statistical Computing}}
-      {\UVa}
-      {Score: 9.0/10.0}
-
-      \\
-      \entry
-      {2017}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46929.pdf}{Parallel Computing}}
-      {\UVa}
-      {Score: 9.9/10.0 with Honors}
-
-      \entry
-      {}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46959.pdf}{Operation Research Models}}
-      {\UVa}
-      {Score: 9.5/10.0 with Honors}
-
-      \entry
-      {}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46970.pdf}{Data Mining}}
-      {\UVa}
-      {Score: 9.0/10.0}
-
-      \entry
-      {}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46932.pdf}{Machine Learning Techniques}}
-      {\UVa}
-      {Score: 9.0/10.0}
-
-      \\
-      \entry
-      {2016}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46948.pdf}{Codes and Cryptography}}
-      {\UVa}
-      {Score: 10.0/10.0 with Honors}
-
-      \entry
-      {}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46944.pdf}{Algorithms and Computing}}
-      {\UVa}
-      {Score: 9.5/10.0 with Honors}
-
-      \entry
-      {}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46931.pdf}{Web Services and Systems}}
-      {\UVa}
-      {Score: 9.0/10.0}
-
-      \\
-      \entry
-      {2015}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2014/07/G46915.pdf}{Operating Systems Structures}}
-      {\UVa}
-      {Score: 9.5/10.0 with Honors}
-
-      \\
-      \entry
-      {2014}
-      {\myhref{https://www.inf.uva.es/wp-content/uploads/2012/07/C12-45187-RED.pdf}{Fundamentals of Computer Networks}}
-      {\UVa}
-      {Score: 9.0/10.0}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	COURSES SECTION
-%-------------------------------------------------------------------------------
-
-  \section{courses}
-
-    \begin{entrylist}
-
-      \entry
-      {2018}
-      {Language Proficiency - Python}
-      {HackerRank}
-      {115 coding challenges}
-
-      \entry
-      {}
-      {Search and Use of Scientific Information}
-      {BUVa}
-      {25 hours}
-
-      \\
-      \entry
-      {2017}
-      {Scratch Monitor}
-      {FUNGE UVa}
-      {12 hours}
-
-      \\
-      \entry
-      {2016}
-      {SG Academy}
-      {SolidGear}
-      {20 hours}
-
-      \\
-      \entry
-      {2014}
-      {Plastic SCM (Software Control Manager)}
-      {Codice Software}
-      {8 hours}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-%-------------------------------------------------------------------------------
-%	LANGUAGES SECTION
-%-------------------------------------------------------------------------------
-
-  \section{languages}
-
-    \begin{entrylist}
-
-      \entry
-      {}
-      {Spanish}
-      {}
-      {Native Fluency}
-
-      \\
-      \entry
-      {}
-      {English}
-      {}
-      {B2 Level (Erasmus+ OLS certificate)}
-
-      \\
-      \entry
-      {}
-      {Italian}
-      {}
-      {Elementary proficiency}
-
-    \end{entrylist}
-
-%-------------------------------------------------------------------------------
-
-
-%-------------------------------------------------------------------------------
-%	INTERESTS SECTION
-%-------------------------------------------------------------------------------
-
-  \section{interests}
-
-    \textbf{professional:} competitive programming, data analysis, algorithms, machine learning, design patterns, web design, software design, internet of things
-
-    \textbf{personal:} motor sports, rap and instrumental music (especially lo-fi beats), turntablism, cooking, biking, technology
+    
+    \begin{itemize}
+      \item \textbf{grafo}: High performance network modeling and analysis (starting...) - Rust
+      \item \textbf{\helpacket}: Open source and collaborative platform against COVID-20 (discontinued) - Django + Vue.js
+      \item \textbf{\jinete} High Performance solving suite for the Pickup and Delivery Problem (part of FDP) - Python
+      \item \textbf{\ngkatex}: \TeX\ math expressions processing on browsers boosted by KaTeX (1K/week downloads) - Angular
+      \item \textbf{\TFGraph}: Graph networks processing on GPUs (part of FDP) - Python
+
+    \end{itemize}
 
 %-------------------------------------------------------------------------------
 
