--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -143,7 +143,7 @@
   {
     
     \begin{itemize}
-        \item Enforce algorithmic skills mostly on Operations Research subjects, analyzing combinatorial optimization problems specifically those related with Vehicle Routing Problems (VRP).
+        \item Enforce algorithmic skills mostly on operations research subjects, analyzing combinatorial optimization problems especially those related with Vehicle Routing Problems (VRPs).
       \item Enrich mathematical knowledge mostly on calculus and theorical statistics related subjects.
       \item Thesis title: Scalable solving methods for the Dial-a-Ride Problem.
       \item High marks: \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46959.pdf}{Operation Research Models} (Hons), \myhref{https://alojamientos.uva.es/guia_docente/uploads/2017/549/47089/1/Documento.pdf}{Statistical Computing}, \myhref{https://alojamientos.uva.es/guia_docente/uploads/2018/549/47102/1/Documento.pdf}{Categorical Data Analysis}.
@@ -157,7 +157,7 @@
   {\UNIBO}
   {
     \begin{itemize}
-      \item Abroad experience during 6 months on a foreign country and different language (classes taught in Engligh).
+      \item Abroad experience during 6 months on a foreign country and different language (classes taught in English).
       \item Depth understanding of the Generalized Linear Model (GLM).
       \item High marks on: \myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2019/423526}{Statistical Models and Applications}, \myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2018/423554}{Advanced Survival Analysis}.
     \end{itemize}
@@ -170,7 +170,7 @@
   {\UVa}
   {
     \begin{itemize}
-      \item Build a Problem-Solving mentality, focused mostly on the how-to-do and analysis of implications of the available approaches.
+      \item Build a problem-solving mentality, focused mostly on the how-to-do and analysis of implications of the available approaches.
       \item Interest for mostly algorithmic subjects, but also paying special attention to the ones related with software engineering topics.
       \item Thesis title: Algorithms for Big Data: Graphs and PageRank.
       \item High marks: \myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46944.pdf}{Algorithms and Computing} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46948.pdf}{Codes and Cryptography} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46929.pdf}{Parallel Computing} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2014/07/G46915.pdf}{Operating Systems Structures} (Hons), \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46970.pdf}{Data Mining}, \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46932.pdf}{Machine Learning Techniques}, \myhref{https://www.inf.uva.es/wp-content/uploads/2015/07/G46931.pdf}{Web Services and Systems}, \myhref{https://www.inf.uva.es/wp-content/uploads/2012/07/C12-45187-RED.pdf}{Fundamentals of Computer Networks}.
