--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -144,7 +144,7 @@
     
     \begin{itemize}
         \item Enforce algorithmic skills mostly on operations research subjects, analyzing combinatorial optimization problems especially those related with Vehicle Routing Problems (VRPs).
-      \item Enrich mathematical knowledge mostly on calculus and theorical statistics related subjects.
+      \item Enrich mathematical knowledge mostly on calculus and theoretical statistics related subjects.
       \item Thesis title: Scalable solving methods for the Dial-a-Ride Problem.
       \item High marks: \myhref{https://www.inf.uva.es/wp-content/uploads/2016/06/G46959.pdf}{Operation Research Models} (Hons), \myhref{https://alojamientos.uva.es/guia_docente/uploads/2017/549/47089/1/Documento.pdf}{Statistical Computing}, \myhref{https://alojamientos.uva.es/guia_docente/uploads/2018/549/47102/1/Documento.pdf}{Categorical Data Analysis}.
     \end{itemize}
