--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -86,7 +86,7 @@
           \item Build a fully Autonomous and Unsupervised Testing System based on scraping and intelligent navigation from the ground, being able to detect almost all interface changes and schedule navigation paths towards more susceptible bug areas.
           \item Design and Develop a remote computing protocol, currently used by the company as the standard data sharing strategy.
           \item Propose, define and assist in the implantation of a Python + VCS packaging strategy around the company, firstly over Subversion and currently over Git
-          \item Take part in a Car Damage Detection system based on image analysis mostly approached with Depth Learning strategies.
+          \item Take part in a Car Damage Detection system based on image analysis mostly approached with Deep Learning strategies.
         \end{itemize}
       }
 
@@ -158,7 +158,7 @@
   {
     \begin{itemize}
       \item Abroad experience during 6 months on a foreign country and different language (classes taught in English).
-      \item Depth understanding of the Generalized Linear Model (GLM).
+      \item Deep understanding of the Generalized Linear Model (GLM).
       \item High marks on: \myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2019/423526}{Statistical Models and Applications}, \myhref{https://www.unibo.it/en/teaching/course-unit-catalogue/course-unit/2018/423554}{Advanced Survival Analysis}.
     \end{itemize}
   }
