* Fix small typo.

--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -65,7 +65,7 @@
 
   \section{summary}
 
-  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those related with \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm specially curious about \textbf{Sequential Models}, \textbf{Architectural Patterns} and the \textbf{Rust Programming Language}. One of my biggest hobbies is \textbf{Competitive Programming}, which I try to practice as much as possible.
+  Hi everyone! I'm a double Bachelor's degree graduate in \textbf{Computer Engineering} and in \textbf{Statistics} from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those related with \textbf{Combinatorial Optimization}. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm especially curious about \textbf{Sequential Models}, \textbf{Architectural Patterns} and the \textbf{Rust Programming Language}. One of my biggest hobbies is \textbf{Competitive Programming}, which I try to practice as much as possible.
 
 %-------------------------------------------------------------------------------
 
