--- a/garciparedes-cv.tex
+++ b/garciparedes-cv.tex
@@ -78,7 +78,18 @@
     \begin{entrylist}
 
       \entry
-      {2018/06 -- present}
+      {2021/04 -- present}
+      {Software Engineer}
+      {Clariteia}
+      {
+        \begin{itemize}
+          \item Loading ...
+        \end{itemize}
+      }
+
+      \\
+      \entry
+      {2018/06 -- 2021/04}
       {Software Engineer}
       {\Unlimiteck}
       {
@@ -96,7 +107,7 @@
       {}
       {
         \begin{itemize}
-          \item Design and Develop the implementation of a fully functional Vehicle Routing solving suite achieving results equivalent to another commercial alternatives, but with an easy-to-use and extensible to client requirements design.
+          \item Design and develop a fully functional Vehicle Routing solving suite achieving results equivalent to another commercial alternatives, with an easy-to-use and extensible to client requirements design.
         \end{itemize}
       }
 
@@ -108,7 +119,6 @@
       {
         \begin{itemize}
           \item Develop an ETL pipeline fully written in R which helped a Research Group in the task of knowing what vehicle's internal parts have been damaged, given many metrics from the external ones.
-          \item Help speeding up intensive computation functions initially written in R with C++ bindings.
         \end{itemize}
       }
 
@@ -119,8 +129,7 @@
       {\Brooktec}
       {
         \begin{itemize}
-          \item Develop a Song Polling plugin for WordPress.
-          \item Maintain already stablished PHP projects, applying client update requests.
+          \item Develop a song polling plugin for WordPress.
         \end{itemize}
       }
 
